--- a/Views/teacher.ejs
+++ b/Views/teacher.ejs
@@ -23,7 +23,7 @@
                     <td style="text-align: center;">Surname</td>
                     <td style="text-align: center;">Gender</td>
                     <td style="text-align: center;">Lesson Code</td>
-                    <td style="text-align: center;">Create Date</td>
+                    <td><a href="addteacher"><button type="submit" style="background-color: lightblue;">Yeni Kayıt</button></a></td>
                 </tr>
             </thead>
             <tbody>
