--- a/Views/lesson.ejs
+++ b/Views/lesson.ejs
@@ -20,6 +20,7 @@
                 <tr>
                     <td style="text-align: center;">Id</td>
                     <td style="text-align: center;">Name</td>
+                    <td><a href="addlesson"><button type="submit" style="background-color: lightblue;">Yeni Kayıt</button></a></td>
                 </tr>
             </thead>
             <tbody>
